--- a/imooc-security/imooc-security-browser/pom.xml
+++ b/imooc-security/imooc-security-browser/pom.xml
@@ -27,5 +27,18 @@
             <artifactId>shiro-core</artifactId>
             <version>1.2.2</version>
         </dependency>
+
+        <!--lombok 注解实体-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
