--- a/imooc-security/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security/imooc-security-demo/src/main/resources/application.properties
@@ -7,6 +7,24 @@ spring.session.store-type = none
 
 #server.session.timeout = 600
 
-security.basic.enabled = false
+# security.basic.enabled = true
 
 server.port = 8080
+
+#imooc.security.browser.loginPage = /demo-signIn.html
+imooc.security.browser.loginType = REDIRECT
+
+#imooc.security.code.image.length = 6
+#imooc.security.code.image.width = 100
+#imooc.security.code.image.url = /user/*
+
+#imooc.security.social.qq.app-id =
+#imooc.security.social.qq.app-secret =
+#imooc.security.social.qq.providerId = callback.do
+
+#imooc.security.social.weixin.app-id = wxd99431bbff8305a0
+#imooc.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
+
+#imooc.security.browser.signUpUrl = /demo-signUp.html
+
+#imooc.security.social.filterProcessesUrl = /qqLogin
