--- a/imooc-security/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security/imooc-security-demo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.session.store-type = none
 server.port = 8080
 
 #imooc.security.browser.loginPage = /demo-signIn.html
-imooc.security.browser.loginType = REDIRECT
+#imooc.security.browser.loginType = REDIRECT
 
 #imooc.security.code.image.length = 6
 #imooc.security.code.image.width = 100
