4-8 图片验证码重构

--- a/imooc-security/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security/imooc-security-demo/src/main/resources/application.properties
@@ -14,9 +14,9 @@ server.port = 8080
 #imooc.security.browser.loginPage = /demo-signIn.html
 #imooc.security.browser.loginType = REDIRECT
 
-#imooc.security.code.image.length = 6
-#imooc.security.code.image.width = 100
-#imooc.security.code.image.url = /user/*
+imooc.security.code.image.length = 6
+imooc.security.code.image.width = 100
+imooc.security.code.image.url = /user,/user/*
 
 #imooc.security.social.qq.app-id =
 #imooc.security.social.qq.app-secret =
